--- a/Canary/Custom.css
+++ b/Canary/Custom.css
@@ -652,15 +652,21 @@
 #-webkit-web-inspector .section.expanded .header::before,
 #-webkit-web-inspector .event-bars .event-bar.expanded .header::before,
 #-webkit-web-inspector .section .properties-tree li.parent.expanded::before,
-#-webkit-web-inspector .computed-style .properties-tree li.parent.expanded::before {
+#-webkit-web-inspector .computed-style .properties-tree li.parent.expanded::before,
+#-webkit-web-inspector .event-listener-breakpoints li.parent.expanded::before {
 	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 #-webkit-web-inspector .section .header::before,
 #-webkit-web-inspector .event-bars .event-bar .header::before,
 #-webkit-web-inspector .section .properties-tree li.parent::before,
-#-webkit-web-inspector .computed-style .properties-tree li.parent::before {
+#-webkit-web-inspector .computed-style .properties-tree li.parent::before,
+#-webkit-web-inspector .event-listener-breakpoints li.parent::before {
 	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
+}
+
+#-webkit-web-inspector .event-listener-breakpoints .event-category {
+	color: #606060 !important; /* Sources > Event Listeners Text */
 }
 
 /* Network */
