--- a/Canary/Custom.css
+++ b/Canary/Custom.css
@@ -54,7 +54,7 @@
 	 ************************************/
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements .split-view-contents:first-child,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts .split-view-contents:first-child {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.sources .split-view-contents:first-child {
 		width: 100%;
 		height: 75%;
 		top: auto !important;
@@ -62,7 +62,7 @@
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements .split-view-contents.split-view-sidebar-right,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts .split-view-contents.split-view-sidebar-right {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.sources .split-view-contents.split-view-sidebar-right {
 		width: 100% !important;
 		height: 25% !important;
 		left: 0;
@@ -70,25 +70,25 @@
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.sources > .split-view {
 		display: -webkit-flex;
 		-webkit-flex-flow: column;
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view > * ,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view > * {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.sources > .split-view > * {
 		-webkit-flex: 0;
 		position: relative !important;
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view > :first-child,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view > :first-child {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.sources > .split-view > :first-child {
 		-webkit-flex: 1;
 	}
 
 	/** Hide the resizers */
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements .split-view-resizer,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts .split-view-resizer {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.sources .split-view-resizer {
 		display: none;
 	}
 
@@ -650,11 +650,11 @@
 
 /* Scripts */
 
-#-webkit-web-inspector .scripts.panel .sidebar-overlay {
+#-webkit-web-inspector .sources.panel .sidebar-overlay {
 	background: #242424;
 }
 
-#-webkit-web-inspector .scripts.panel .outline-disclosure li.selected .selection,
+#-webkit-web-inspector .sources.panel .outline-disclosure li.selected .selection,
 #-webkit-web-inspector .outline-disclosure ol:focus li.selected {
 	background: #444 !important;
 }
